# mijikaku

./: Cargo.toml  README.md  Shuttle.toml
migrations/: 20230714193000_init.sql
src/: main.rs
