[package]
name = "mijikaku"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
tokio = "1.28.2"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
nanoid = "0.4.0"
url = "2.3.1"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
mime = "0.3.17"

